--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     String::Cluster::Hobohm - Cluster strings using the Hobohm algorithm
 
 VERSION
-    version 0.112890
+    version 0.121330
 
 SYNOPSIS
         use String::Cluster::Hobohm;
@@ -51,8 +51,8 @@ METHODS
 
         [ [ \'foo', \'foa' ], [ \'bar' ] ];
 
-    The reason to use references instead of the actual strings is to avoid
-    copying potentially large strings and taking up too much memory
+    The reason for using references instead of the actual strings is to
+    avoid copying potentially large strings and taking up too much memory
     (remember that the algorithm was designed with biological sequences in
     mind).
 
@@ -65,7 +65,7 @@ AUTHOR
     Bruno Vecchi <vecchi.b gmail.com>
 
 COPYRIGHT AND LICENSE
-    This software is copyright (c) 2011 by Bruno Vecchi.
+    This software is copyright (c) 2012 by Bruno Vecchi.
 
     This is free software; you can redistribute it and/or modify it under
     the same terms as the Perl 5 programming language system itself.
